[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Optimization-algorithm-implementation"
version = "0.1.0"
description = "Optimization algorithm implementation project."
requires-python = ">=3.9"
dependencies = [
    "matplotlib==3.9.4",
    "numpy==2.0.2",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
]
